# inhabit_teleop

./: .gitignore  README.md  README_windows.md  pyrightconfig.json  run.txt  schematic.kicad_pro  schematic.kicad_sch
.local/unitree_robotics/lib/cmake/unitree_sdk2/: unitree_sdk2ConfigVersion.cmake
firmware/mcp3008_test/: CMakeLists.txt  sdkconfig.defaults
firmware/mcp3008_test/main/: main.c
firmware/serial_test/: CMakeLists.txt  mcp3008debugginglog.txt  sdkconfig
firmware/serial_test/.cache/clangd/index/: main.c.526C1E5A5C17C77D.idx
firmware/serial_test/main/: CMakeLists.txt  main.c  main_2.c  main_mcp3008.c
programs/: AI_HANDOFF_NOTES.txt  CMakeLists.txt  claude_notes.txt  g1BRIDGE.py  g1PACKETBRIDGE.py  g1_17pot_bridge_config.py  g1_BRIDGELIB.py  g1_POTCONFIG.py  g1_SDKSERIALCOMM.hpp  g1_bridge_lib.py  g1_bridge_lib_20ch.py  g1_joint_config_ui.py  g1_left_wrist_bridge_config.py  g1_left_wrist_serial.cpp  g1_unified_studio.py  run_g1_bridge_20ch.py  serial_probe.py  uitest1.g1config.json  virtual_sim.py  virtual_sim_serial.py  virtual_sim_serial_v2.py  virtual_sim_serial_v3.py
programs/scratch/: g1BRIDGE.py  g1PACKETBRIDGE.py  g1_left_wrist_serial.cpp  g1_virtual_pot_sim.py  mock_esp.py  read_mcp3008_packets.py  run_g1_bridge.py
tools/: README_cpp_local_setup.md  build_g1_left_wrist_serial.sh  env_unitree_sdk2_local.sh  setup_unitree_sdk2_local.sh
